stylesheet.css
body{
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Open Sans', sans-serif;
}

.welcome {
  width: 75%;
  text-align: center;
  border-style: solid solid hidden solid;
}

.initButtons {
  width: 75%;
  text-align: center;
  border-style: hidden solid solid solid;
}

.newPerson {
  width: 75%;
  text-align: center;
  border-style: hidden solid solid solid;
  display: none;
}

.existingPersonRadio {
  width: 75%;
  display: none;
  text-align: center;
  border-style: hidden solid hidden solid;
}

.existingPersonBox {
  width: 75%;
  background-color: magenta;
  display: none;
}

.radioWrapper {
  display: block;
}

@media (prefers-color-scheme: dark) {
  body{
    background-color: black; 
    color: white;
  }

